--- a/style.css
+++ b/style.css
@@ -54,9 +54,8 @@ body{
     
 }
 
-/* Change the link color to #111 (black) on hover */
 .nav-item a:hover {
-    background-color:#2b363a;
+    background-color:#4f5763;
 }
 
 li.dropdown {
@@ -135,3 +134,14 @@ li.dropdown {
   text-align: center;
 }
 
+
+.home{
+  background-color:#a0a7b3;
+}
+ 
+.boring {
+  color: white;
+  font-size: 50px;
+  text-align: center;
+  margin-top: 10rem;
+}
